# pypercolate

./: .coveragerc  .gitattributes  .gitignore  .landscape.yaml  .travis.yml  AUTHORS.rst  LICENSE.txt  MANIFEST.in  README.rst  autodocs.sh  autotest.sh  doc-requirements.txt  dodo.py  pytest.ini  requirements-conda.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  tox.ini  toxdev.ini
devtools/: cdocs.sh  ctest.sh
docs/: .gitignore  Makefile  about-include.rst  about.rst  changelog.rst  conf.py  developer.rst  index.rst  license.rst  newman-ziff.rst  percolation-theory.rst  pypercolate-hpc.rst  pypercolate.bib  pypercolate.rst  quickstart-hpc.rst  reference-percolate-hpc.rst  reference-percolate-percolate.rst  reference-percolate.rst  reference.rst  setup.rst  tutorial-bond-square-lattice.ipynb  user.rst  zreferences.rst
docs/hpc-performance/: convolution_mem.npy  convolution_times.npy  dimensions.npy  graph_mem.npy  graph_times.npy  pypercolate-hpc-performance.ipynb  run_mem.npy  run_times.npy
percolate/: __init__.py  _version.py  hpc.py  percolate.py
percolate/share/: .gitignore  jugfile.py
percolate/test/: test_hpc.py  test_percolate.py
tests/: test_percolate.py
