[metadata]
description = A scientific Python package for Monte Carlo simulation of percolation on graphs
author = Andreas Sorge
author_email = pypercolate@asorge.de
license = apache
url = http://github.com/andsor/pypercolate
# Comma separated list of data inside your package to include
package_data = 
# Comma separated list of data outside your package to include
# Equivalent to adding files to MANIFEST.in
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 3 - Alpha,
              Intended Audience :: Science/Research,
              License :: OSI Approved :: Apache Software License,
              Programming Language :: Python,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.4,
              Topic :: Scientific/Engineering :: Mathematics,
              Topic :: Scientific/Engineering :: Physics

[console_scripts]
# Add here console scripts like:
# script = percolate.module:function
# for example:
# hello_world = percolate.skeleton:run

[test]
# html, xml or annotate
# cov-report = html
# junitxml = junit.xml
